<resources>
    <string name="app_name">TugasPertemuan2</string>
    <string name="pt_name">PT XYZ</string>
    <string name="pt_location">Sleman</string>
    <string name="info">Informasi perubahan data katalog</string>
    <string name="info2">Pembaruan terakhir: </string>
    <string name="info3">16-06-2022 15:00:01</string>
    <string name="pembaruan_selanjutnya">Pembaruan selanjutnya: </string>
    <string name="tanggal_selanjutnya">17-06-2022 15:00:01</string>
    <string name="katalog_tender">Katalog Tender</string>
    <string name="tender_tersimpan">Tender Tersimpan</string>
    <string name="laporan_statistik">Laporan Statistik</string>
    <string name="pengaturan">Pengaturan</string>
</resources>
